[project]
name = "crypto-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksandr Nazarevych",email = "oleksandr.o.nazarevych@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.4,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "vectorbt (>=0.28.0,<0.29.0)",
    "ipywidgets (>=8.1.7,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
